# macemu

./: .gitignore  .gitmodules  ARCHITECTURE.md  AUDIO_COMPLETE_GUIDE.md  AUDIO_PULL_MODEL_DESIGN.md  BasiliskII_Prefs  CONFIG_PANEL_UPDATES.md  DEBIAN-PACKAGING.md  DEBUGGING_CRASHES.md  EMULATOR_STARTUP_CHANGES.md  HOOK_FREE_DESIGN.md  INTERRUPT_DESIGN.md  INTERRUPT_IMPL_STATUS.md  MASSIVE_REFACTOR_PLAN.md  README-WEBRTC.md  SESSION_SUMMARY.md  UNICORN_VBR_PATCH.txt  basilisk_ii.prefs  build-all.sh  build-deb.sh  compare_traces.py  compare_traces.sh  decode_trace.py  run_output.txt  run_output_fixed.txt  run_traces.sh  trace_analyzer.py  vbr_corruption_analysis.md
.claude/: PROJECT_STRUCTURE.md
debian/: changelog  control  copyright  install  macemu-webrtc-run  macemu-webrtc-setup  postinst  postrm  rules
docs/: 01_OVERVIEW.md  02_ARCHITECTURE.md  03_DRIVERS.md  04_PLATFORM_LAYER.md  05_KEY_FILES.md  AUDIO_SOCKET_DESIGN.md  IMPLEMENTATION_ROADMAP.md  IPC_DESIGN.md  LATENCY_TRACING.md  PHOENIX_MAC_OVERVIEW.md  PING_PONG_IMPLEMENTATION_STATUS.md  SHEEPSHAVER_IPC_INTEGRATION.md  (+4 more)
macemu-next/: BasiliskII_XPRAM  meson.build  meson_options.txt  uae_first_50.txt  unicorn_first_50.txt
macemu-next/.claude/: README.md  context.md  instructions.md
macemu-next/docs/: A-line-F-line-Exception-Design.md  A-line-F-line-Status.md  Architecture.md  CPU-Model-Configuration.md  CPU_TYPE_FIX_SUMMARY.md  Commands.md  Full-Monty-Plan.md  INVESTIGATION_COMPLETE.md  LEGACY_API_REMOVAL.md  Memory.md  PROJECT-OVERVIEW.md  Platform-Adapter-Implementation.md  Platform-Architecture.md  ProjectGoals.md  QEMU_EXTRACTION_ANALYSIS.md  README.md  REORGANIZATION_SUMMARY.md  ROM-Patching-Required.md  TodoStatus.md  UAE-Quirks.md  UAE_HYBRID_EXECUTION_ISSUE.md  Unicorn-Bug-SR-Lazy-Flags.md  Unicorn-Quirks.md  VBR_FIX_SUMMARY.md  cpu_trace_debugging.md
macemu-next/docs/completed/: CLEANUP_PROPOSAL.md  DOCUMENTATION_CLEANUP_SUMMARY.md  INTERRUPT_COMPLETE.md  PROJECT-OVERVIEW.md  README.md  STATUS.md  UNICORN_NATIVE_TRAP_EXECUTION.md  UNMAPPED_MEMORY_ISSUE.md
macemu-next/docs/deepdive/: CpuBackendApi.md  DualCpuValidationInitialization.md  InterruptTimingAnalysis.md  JIT_Block_Size_Analysis.md  README.md  UnicornEarlyCrashInvestigation.md  UnicornQuirks.md
macemu-next/roms/: build_quadra_halt.py  build_test_halt.py  quadra_halt.rom  test_halt.s
macemu-next/scripts/: compare_traces.sh  diff_cpus.sh
macemu-next/src/: main.cpp
macemu-next/src/common/: platform.cpp  rom_patches.cpp  user_strings.cpp
macemu-next/src/common/include/: config.h  cpu_emulation.h  main.h  memory_access.h  mon.h  platform.h  platform_memory.h  video.h
macemu-next/src/core/: adb.cpp  emul_op.cpp  meson.build  rom_patches.cpp
macemu-next/src/cpu/: cpu_backend.cpp  cpu_backend.h  cpu_dualcpu.c  cpu_trace.c  cpu_trace.h  cpu_uae.c  cpu_unicorn.c  cpu_unicorn.cpp  dualcpu.c  dualcpu.h  meson.build  uae_stubs.c  uae_wrapper.cpp  uae_wrapper.h  unicorn_exception.c  unicorn_exception.h  unicorn_validation.cpp  unicorn_validation.h  unicorn_wrapper.c  unicorn_wrapper.h
macemu-next/src/cpu/uae_cpu/: basilisk_glue.cpp  basilisk_stubs.cpp  build68k  config.h  cpu_emulation.h  cpuemu_ff.cpp  cpuemu_ff_aliases.cpp  gencpu  main.h  memory.h  meson.build  newcpu.cpp  newcpu.h  noflags.h  sysdeps.h  user_strings_unix.h
macemu-next/src/drivers/: meson.build
macemu-next/src/drivers/adapter/: audio_adapter.cpp  disk_adapter.cpp  ether_adapter.cpp  scsi_adapter.cpp  serial_adapter.cpp  video_adapter.cpp
macemu-next/src/drivers/audio/: audio_null.cpp
macemu-next/src/drivers/disk/: disk_null.cpp
macemu-next/src/drivers/dummy/: meson.build  video_dummy.cpp
macemu-next/src/drivers/ether/: ether_null.cpp
macemu-next/src/drivers/platform/: platform_null.cpp
macemu-next/src/drivers/scsi/: scsi_null.cpp
macemu-next/src/drivers/serial/: serial_null.cpp
macemu-next/src/drivers/video/: video_null.cpp
macemu-next/tests/: meson.build  test_halt_main.cpp  test_halt_simple.cpp  test_unicorn_adda_bug.c
macemu-next/tests/boot/: meson.build  test_boot.cpp  test_boot_dualcpu.cpp
macemu-next/tests/cpu/: test_dualcpu.c  test_unicorn_m68k.c
web-streaming/: .gitignore  LIBDATACHANNEL_SIGNALING_RESEARCH.md  Makefile  Makefile.in  README.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  SHEEPSHAVER_STATUS.md  SIMPLIFICATION_SUGGESTIONS.md  UNIFIED_CONFIG.md  configure.ac  decode-crash.sh  frame_0_1024x768.ppm  frame_1_1024x768.ppm  frame_2_1024x768.ppm  gdb_commands.txt  gdb_output.txt  macemu-config.json  sheepshaver.prefs
web-streaming/.finf/: storage
web-streaming/client/: client.js  datachannel_client.js  index.html  index_datachannel.html  index_webrtc.html  styles.css  webrtc_client.js
web-streaming/m4/: ax_cxx_compile_stdcxx.m4
web-streaming/server/: VP9_STATUS.md  audio_config.h  av1_encoder.cpp  av1_encoder.h  av1_stream.h  basilisk_integration.cpp  basilisk_integration.h  codec.h  datachannel_webrtc.cpp  datachannel_webrtc.h  gstreamer_webrtc.cpp  gstreamer_webrtc.h  h264_encoder.cpp  h264_stream.h  ipc_protocol.h  json_utils.cpp  json_utils.h  keycode_map.cpp  keycode_map.h  libyuv_fallback.h  opus_encoder.cpp  opus_encoder.h  png_encoder.cpp  png_encoder.h  png_stream.h  server.cpp  storage_manager.cpp  storage_manager.h  test_gstreamer.cpp  test_server.cpp  tone_generator.h  video_stream.h  vp9_encoder.cpp  vp9_encoder.h  webp_encoder.cpp  webp_encoder.h  websocket_server.cpp  websocket_server.h
web-streaming/server/config/: config_manager.cpp  config_manager.h  server_config.cpp  server_config.h
web-streaming/server/emulator/: process_manager.cpp  process_manager.h
web-streaming/server/http/: api_handlers.cpp  api_handlers.h  http_server.cpp  http_server.h  static_files.cpp  static_files.h
web-streaming/server/ipc/: ipc_connection.cpp  ipc_connection.h
web-streaming/server/storage/: file_scanner.cpp  file_scanner.h  prefs_manager.cpp  prefs_manager.h
web-streaming/server/utils/: json_utils.cpp  json_utils.h  keyboard_map.cpp  keyboard_map.h
web-streaming/server/webrtc/: peer_connection.h  webrtc_server.h
(+72 files in other folders)
